# Stock_LSTM_TIME-SERIES

./: .gitignore  README.md  apple_stock_data.csv  chechkpoint.model.keras  lstm_model.h5  main.py  pre_process.ipynb  pyproject.toml  requirements.txt  yfin.ipynb
logs/train/: events.out.tfevents.1750395939.LAPTOP-E32CDACJ.22408.0.v2
logs/validation/: events.out.tfevents.1750395941.LAPTOP-E32CDACJ.22408.1.v2
